[package]
name = "cryptofun"
version = "0.1.0"
authors = ["Byron Houwens <zhion360@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.3"
blake2 = "0.7"
sha3 = "0.7.2"
neon = "0.1.20"
base64 = "~0.6.0"
futures = "0.1.18"
num-traits = "0.1"
num-integer = "0.1"
filebuffer = "0.3.0"
rust-crypto = "^0.2"
tiny-keccak = "1.0.2"
num-bigint = "0.1.43"
futures-cpupool = "0.1.8"
rustc-serialize = "0.3.24"
digest = { version = "0.7.2", features = ["std"]}
bincode = "1.0.0"
sodiumoxide = "0.2.0"
memmap = "0.6.2"
serde = "1.0.27"
