[package]
name = "cryptofun"
version = "0.1.0"
authors = ["Byron Houwens <zhion360@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.3"
blake2 = "0.7"
sha3 = "0.7.2"
base64 = "~0.6.0"
num-traits = "0.1"
num-integer = "0.1"
num-bigint = "0.1.43"
rustc-serialize = "0.3.24"
bincode = "1.0.0"
serde = "1.0.27"
ramp = "0.5.1"
